k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service # can be used as hostname to connect other pods
spec:
  type: ClusterIP
  selector:
    component: web # manage deployments with this lable
  ports:
    - port: 3000 # port another pod can use to access targetPort
      targetPort: 3000 # port inside of the pod we want to open up traffic to
