k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # additional configurations about the ingress object
    kubernetes.io/ingress.class: 'nginx' # create an ingress controller based on the nginx project
    nginx.ingress.kubernetes.io/use-regex: 'true' 
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # enable rewriting on /<something> path
spec:
  rules:
    - http:
        paths:
          - path: /?(.*) # route /* to http://client-cluster-ip-service:3000
            pathType: Prefix
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
          - path: /api/?(.*) # route /api/* to http://server-cluster-ip-service:3000
            pathType: Prefix
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
